# bitCaster

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/rules/: aspire.md  design.md  doc-site.md  e2e-tests.md  frontend.md  infrastructure.md  nut-ctf.md  server.md
.github/workflows/: deploy-docs.yml
AppHost/: AppHost.csproj  Program.cs
AppHost/Properties/: launchSettings.json
BitCaster.InMemoryMatchingEngine/: BitCaster.InMemoryMatchingEngine.csproj  Dockerfile  InMemoryOrderBookManager.cs  Program.cs
BitCaster.InMemoryMatchingEngine/Endpoints/: BookEndpoints.cs  OrderEndpoints.cs
BitCaster.InMemoryMatchingEngine/Hubs/: MarketHub.cs
BitCaster.MatchingEngine.Contracts/: BitCaster.MatchingEngine.Contracts.csproj  nswag.json
BitCaster.MatchingEngine.Contracts/Domain/: Fill.cs  Order.cs  Snapshots.cs  ValueTypes.cs
BitCaster.MatchingEngine.Contracts/specs/: asyncapi.yaml  (+1 more)
BitCaster.Server/: BitCaster.Server.csproj  Dockerfile  Program.cs
bitCaster/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
bitCaster-app/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.setup.ts
bitCaster-doc/: astro.config.mjs  package-lock.json  package.json
infrastructure/: main.tf  outputs.tf  variables.tf
plans/: atomic-swap-server-relay.md  deposit-withdrawal.md  separate-matching-engine.md  wallet-setup.md
tools/seed-conditions/: Cargo.toml  Dockerfile
tools/seed-conditions/src/: main.rs
(+142 files in other folders)
