[package]
name = "seed-conditions"
version = "0.1.0"
edition = "2021"

[dependencies]
cashu = { path = "../../cdk/crates/cashu", features = ["test-utils"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
